--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,12 @@ repositories {
 
 dependencies {
 
-    testCompile 'junit:junit:4.12'
+    compile group: 'org.mongodb', name: 'mongodb-driver', version: '3.4.2'
+
+    compile group: 'com.jcabi', name: 'jcabi-log', version: '0.17.1'
+    compile group: 'com.jcabi', name: 'jcabi-email', version: '1.0'
+    compile group: 'com.jcabi', name: 'jcabi-http', version: '1.17.1'
+
+    testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
