--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,16 @@
+buildscript {
+    repositories {
+        jcenter()
+    }
+    dependencies {
+        classpath group: 'io.ratpack', name: 'ratpack-gradle', version: '1.4.5'
+    }
+}
 
+
+apply plugin: 'io.ratpack.ratpack-java'
 apply plugin: 'java'
+apply plugin: 'idea'
 
 repositories {
     jcenter()
@@ -14,5 +25,8 @@ dependencies {
     compile group: 'com.jcabi', name: 'jcabi-http', version: '1.17.1'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
+
+    runtime group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.25'
 }
 
+mainClassName = 'sb.tasks.Application'
