--- a/build.gradle
+++ b/build.gradle
@@ -18,11 +18,15 @@ repositories {
 
 dependencies {
 
+    compile group: 'org.quartz-scheduler', name: 'quartz', version: '2.3.0'
+
     compile group: 'org.mongodb', name: 'mongodb-driver', version: '3.4.2'
 
     compile group: 'com.jcabi', name: 'jcabi-log', version: '0.17.1'
     compile group: 'com.jcabi', name: 'jcabi-email', version: '1.0'
     compile group: 'com.jcabi', name: 'jcabi-http', version: '1.17.1'
+
+    compile group: 'org.jtwig', name: 'jtwig-core', version: '5.85.3.RELEASE'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
 
