fixed bug with url in AnSportExpress; fixed bug with email send

--- a/deploy/Dockerfile
+++ b/deploy/Dockerfile
@@ -2,7 +2,7 @@ FROM openjdk:jre-alpine
 ENV TZ="Asia/Yekaterinburg"
 RUN apk update && apk upgrade && \
   apk add --update tzdata && \
-  apk add ca-certificates wget && \
+  apk add ca-certificates wget curl && \
   update-ca-certificates && \
   wget -O /usr/local/bin/dumb-init https://github.com/Yelp/dumb-init/releases/download/v1.2.0/dumb-init_1.2.0_amd64 && \
   chmod +x /usr/local/bin/dumb-init
