--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ dependencies {
     compile group: 'org.mongodb', name: 'mongodb-driver', version: '3.4.2'
 
     compile group: 'com.jcabi', name: 'jcabi-log', version: '0.17.1'
-    compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.25'
+    compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
     compile group: 'com.jcabi', name: 'jcabi-email', version: '1.9'
     compile group: 'com.jcabi', name: 'jcabi-http', version: '1.17.1'
     compile group: 'com.sun.jersey', name: 'jersey-client', version: '1.19'
