--- a/build.gradle
+++ b/build.gradle
@@ -31,9 +31,9 @@ dependencies {
 
     compile group: 'org.jsoup', name: 'jsoup', version: '1.10.3'
     compile group: 'org.jtwig', name: 'jtwig-core', version: '5.86.0.RELEASE'
+    compile group: 'joda-time', name: 'joda-time', version: '2.9.9'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
-
 
 }
 
