--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,8 @@ dependencies {
     compile group: 'org.jtwig', name: 'jtwig-core', version: '5.86.0.RELEASE'
     compile group: 'joda-time', name: 'joda-time', version: '2.9.9'
 
+    compileOnly 'org.projectlombok:lombok:1.16.18'
+
     testCompile group: 'junit', name: 'junit', version: '4.12'
 
 }
