--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath group: 'io.ratpack', name: 'ratpack-gradle', version: '1.4.1'
+        classpath group: 'io.ratpack', name: 'ratpack-gradle', version: '1.5.1'
         classpath group: 'com.github.jengelman.gradle.plugins', name: 'shadow', version: '2.0.1'
     }
 }
@@ -21,19 +21,21 @@ dependencies {
 
     compile group: 'org.quartz-scheduler', name: 'quartz', version: '2.3.0'
 
-    compile group: 'org.mongodb', name: 'mongodb-driver', version: '3.6.0'
+    compile group: 'org.mongodb', name: 'mongodb-driver', version: '3.6.1'
 
-    compile group: 'com.jcabi', name: 'jcabi-log', version: '0.17.2'
+    compile group: 'com.jcabi', name: 'jcabi-log', version: '0.18'
     compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
     compile group: 'com.jcabi', name: 'jcabi-email', version: '1.10'
-    compile group: 'com.jcabi', name: 'jcabi-http', version: '1.17.1'
+    compile group: 'com.jcabi', name: 'jcabi-http', version: '1.17.2'
     compile group: 'com.sun.jersey', name: 'jersey-client', version: '1.19.4'
 
     compile group: 'org.jsoup', name: 'jsoup', version: '1.11.2'
     compile group: 'org.jtwig', name: 'jtwig-core', version: '5.86.1.RELEASE'
     compile group: 'joda-time', name: 'joda-time', version: '2.9.9'
 
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    compileOnly group:'org.projectlombok', name: 'lombok', version: '1.16.20'
+
+    testCompile group: 'junit', name: 'junit', version: '4.+'
 }
 
 mainClassName = 'sb.tasks.Application'
