--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     compile group: 'com.sun.jersey', name: 'jersey-client', version: '1.19.4'
 
     compile group: 'org.jsoup', name: 'jsoup', version: '1.11.2'
+    compile group: 'com.jcabi', name: 'jcabi-xml', version: '0.21.1'
     compile group: 'org.jtwig', name: 'jtwig-core', version: '5.86.1.RELEASE'
     compile group: 'joda-time', name: 'joda-time', version: '2.9.9'
 
