--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     compile group: 'com.jcabi', name: 'jcabi-http', version: '1.17.2'
     compile group: 'com.sun.jersey', name: 'jersey-client', version: '1.19.4'
 
+    compile group: 'org.cactoos', name: 'cactoos'
     compile group: 'org.jsoup', name: 'jsoup', version: '1.11.2'
     compile group: 'com.jcabi', name: 'jcabi-xml', version: '0.21.1'
     compile group: 'org.jtwig', name: 'jtwig-core', version: '5.86.1.RELEASE'
