--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
-    id 'io.ratpack.ratpack-java' version '1.5.1'
-    id 'com.github.johnrengelman.shadow' version '2.0.2'
+    id 'io.ratpack.ratpack-java' version '1.5.4'
+    id 'com.github.johnrengelman.shadow' version '2.0.3'
     id 'java'
 }
 
@@ -17,7 +17,7 @@ dependencies {
 
     compile group: 'org.quartz-scheduler', name: 'quartz', version: '2.3.0'
 
-    compile group: 'org.mongodb', name: 'mongodb-driver', version: '3.6.1'
+    compile group: 'org.mongodb', name: 'mongodb-driver', version: '3.6.3'
 
     compile group: 'com.jcabi', name: 'jcabi-log', version: '0.18'
     compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
@@ -25,15 +25,16 @@ dependencies {
     compile group: 'com.jcabi', name: 'jcabi-http', version: '1.17.2'
     compile group: 'com.sun.jersey', name: 'jersey-client', version: '1.19.4'
 
-    compile group: 'org.cactoos', name: 'cactoos'
+    compile group: 'org.cactoos', name: 'cactoos', version: '0.29.2'
     compile group: 'org.jsoup', name: 'jsoup', version: '1.11.2'
-    compile group: 'com.jcabi', name: 'jcabi-xml', version: '0.21.1'
+    compile group: 'com.jcabi', name: 'jcabi-xml', version: '0.21.4'
     compile group: 'org.jtwig', name: 'jtwig-core', version: '5.86.1.RELEASE'
     compile group: 'joda-time', name: 'joda-time', version: '2.9.9'
 
-    compileOnly group:'org.projectlombok', name: 'lombok', version: '1.16.20'
+    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.16.20'
 
     testCompile group: 'junit', name: 'junit', version: '4.+'
+
 }
 
 mainClassName = 'sb.tasks.Application'
