--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'io.ratpack.ratpack-java' version '1.5.4'
-    id 'com.github.johnrengelman.shadow' version '4.0.1'
+    id 'com.github.johnrengelman.shadow' version '4.0.3'
     id 'java'
 }
 
@@ -16,7 +16,7 @@ dependencies {
 
     compile group: 'org.quartz-scheduler', name: 'quartz', version: '2.3.0'
 
-    compile group: 'org.mongodb', name: 'mongodb-driver', version: '3.8.2'
+    compile group: 'org.mongodb', name: 'mongodb-driver', version: '3.9.1'
 
     compile group: 'com.jcabi', name: 'jcabi-log', version: '0.18'
     compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
@@ -28,11 +28,11 @@ dependencies {
     compile group: 'org.jsoup', name: 'jsoup', version: '1.11.3'
     compile group: 'com.jcabi', name: 'jcabi-xml', version: '0.21.4'
     compile group: 'org.jtwig', name: 'jtwig-core', version: '5.87.0.RELEASE'
-    compile group: 'joda-time', name: 'joda-time', version: '2.10'
+    compile group: 'joda-time', name: 'joda-time', version: '2.10.1'
 
-    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.2'
+    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
 
-    testCompile group: 'junit', name: 'junit', version: '4.+'
+    testCompile group: 'junit', name: 'junit', version: '4.12'
 
 }
 
