--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'io.ratpack.ratpack-java' version '1.5.4'
     id 'com.github.johnrengelman.shadow' version '4.0.3'
+    id 'io.franzbecker.gradle-lombok' version '1.14'
     id 'java'
 }
 
@@ -21,6 +22,7 @@ dependencies {
     compile group: 'com.jcabi', name: 'jcabi-log', version: '0.18'
     compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
     compile group: 'com.jcabi', name: 'jcabi-email', version: '1.10'
+    compile group: 'javax.mail', name: 'mail', version: '1.4.7'
     compile group: 'com.jcabi', name: 'jcabi-http', version: '1.17.2'
     compile group: 'com.sun.jersey', name: 'jersey-client', version: '1.19.4'
 
@@ -29,7 +31,7 @@ dependencies {
     compile group: 'com.jcabi', name: 'jcabi-xml', version: '0.21.4'
     compile group: 'org.jtwig', name: 'jtwig-core', version: '5.87.0.RELEASE'
     compile group: 'joda-time', name: 'joda-time', version: '2.10.1'
-
+    
     compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
