--- a/build.gradle
+++ b/build.gradle
@@ -3,11 +3,15 @@ plugins {
     id 'com.github.johnrengelman.shadow' version '5.0.0'
     id 'io.franzbecker.gradle-lombok' version '2.2'
     id 'java'
+    id "org.sonarqube" version "2.7.1"
 }
 
 apply plugin: 'com.github.johnrengelman.shadow'
 apply plugin: 'io.ratpack.ratpack-java'
 apply plugin: 'java'
+
+sourceCompatibility = JavaVersion.VERSION_11
+targetCompatibility = JavaVersion.VERSION_11
 
 repositories {
     jcenter()
@@ -31,9 +35,10 @@ dependencies {
     compile group: 'com.jcabi', name: 'jcabi-xml', version: '0.21.4'
     compile group: 'org.jtwig', name: 'jtwig-core', version: '5.87.0.RELEASE'
     compile group: 'joda-time', name: 'joda-time', version: '2.10.1'
-    
-    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.6'
 
+    compileOnly 'org.projectlombok:lombok:1.18.8'
+    annotationProcessor 'org.projectlombok:lombok:1.18.8'
+    
     testCompile group: 'junit', name: 'junit', version: '4.12'
 
 }
