--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ dependencies {
 
     compile group: 'org.mongodb', name: 'mongodb-driver', version: '3.10.2'
 
-    compile group: 'org.cactoos', name: 'cactoos', version: '0.40'
+    implementation 'org.cactoos:cactoos:0.41'
     compile group: 'com.jcabi', name: 'jcabi-log', version: '0.18'
     compile group: 'com.jcabi', name: 'jcabi-email', version: '1.10'
     compile group: 'com.jcabi', name: 'jcabi-http', version: '1.17.2'
