--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,9 @@ targetCompatibility = JavaVersion.VERSION_11
 
 repositories {
     jcenter()
+    maven {
+        url 'http://artifactory.sergeybochkov.com/artifactory/libs-release'
+    }
 }
 
 dependencies {
@@ -40,7 +43,7 @@ dependencies {
     compile group: 'org.jtwig', name: 'jtwig-core', version: '5.87.0.RELEASE'
     compile group: 'joda-time', name: 'joda-time', version: '2.10.1'
 
-    implementation(group: 'resnyx', name: 'resnyx', version: '1.0')
+    implementation(group: 'resnyx', name: 'resnyx', version: '1.1.1')
     
     testCompile group: 'junit', name: 'junit', version: '4.12'
 
@@ -49,16 +52,6 @@ dependencies {
 sonarqube {
     properties {
         property('sonar.projectKey', 'tasks')
-    }
-}
-
-artifactory {
-    contextUrl = "http://artifactory.sergeybochkov.com/artifactory"
-    resolve {
-        repository {
-            repoKey = 'libs-release'
-            maven = true
-        }
     }
 }
 
