--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,14 @@
 plugins {
-    id 'io.ratpack.ratpack-java' version '1.6.0'
-    id 'com.github.johnrengelman.shadow' version '5.0.0'
-    id 'io.franzbecker.gradle-lombok' version '2.2'
+    id 'io.ratpack.ratpack-java' version '1.7.5'
+    id 'com.github.johnrengelman.shadow' version '5.1.0'
+    id 'io.franzbecker.gradle-lombok' version '3.2.0'
     id 'java'
-    id "org.sonarqube" version "2.7.1"
-    id "com.jfrog.artifactory" version "4.9.5"
+    id "com.jfrog.artifactory" version "4.10.0"
 }
 
+apply plugin: 'java'
 apply plugin: 'com.github.johnrengelman.shadow'
 apply plugin: 'io.ratpack.ratpack-java'
-apply plugin: 'java'
 apply plugin: 'com.jfrog.artifactory'
 
 sourceCompatibility = JavaVersion.VERSION_11
@@ -18,41 +17,35 @@ targetCompatibility = JavaVersion.VERSION_11
 repositories {
     jcenter()
     maven {
-        url 'http://artifactory.sergeybochkov.com/artifactory/libs-release'
+        url 'https://artifactory.sergeybochkov.com/artifactory/libs-release'
     }
 }
 
 dependencies {
 
-    compile group: 'org.quartz-scheduler', name: 'quartz', version: '2.3.1'
+    compile group: 'org.quartz-scheduler', name: 'quartz', version: '2.3.2'
 
-    compile group: 'org.mongodb', name: 'mongodb-driver', version: '3.10.2'
+    compile group: 'org.mongodb', name: 'mongodb-driver', version: '3.11.2'
 
-    implementation 'org.cactoos:cactoos:0.41'
-    compile group: 'com.jcabi', name: 'jcabi-log', version: '0.18'
+    compile group: 'org.cactoos', name: 'cactoos', version: '0.42'
+    compile group: 'com.jcabi', name: 'jcabi-log', version: '0.18.1'
     compile group: 'com.jcabi', name: 'jcabi-email', version: '1.10'
     compile group: 'com.jcabi', name: 'jcabi-http', version: '1.17.2'
-    compile group: 'com.jcabi', name: 'jcabi-xml', version: '0.21.4'
+    compile group: 'com.jcabi', name: 'jcabi-xml', version: '0.22.1'
     
     compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
     compile group: 'javax.mail', name: 'mail', version: '1.4.7'
     compile group: 'com.sun.jersey', name: 'jersey-client', version: '1.19.4'
     compile group: 'org.glassfish', name: 'javax.json', version: '1.0.4'
 
-    compile group: 'org.jsoup', name: 'jsoup', version: '1.11.3'
+    compile group: 'org.jsoup', name: 'jsoup', version: '1.12.1'
     compile group: 'org.jtwig', name: 'jtwig-core', version: '5.87.0.RELEASE'
-    compile group: 'joda-time', name: 'joda-time', version: '2.10.1'
+    compile group: 'joda-time', name: 'joda-time', version: '2.10.5'
 
-    implementation(group: 'resnyx', name: 'resnyx', version: '1.1.1')
+    compile group: 'resnyx', name: 'resnyx', version: '1.1.1'
     
     testCompile group: 'junit', name: 'junit', version: '4.12'
 
-}
-
-sonarqube {
-    properties {
-        property('sonar.projectKey', 'tasks')
-    }
 }
 
 mainClassName = 'sb.tasks.Application'
