--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,12 @@
 plugins {
     id 'io.ratpack.ratpack-java' version '1.7.5'
     id 'com.github.johnrengelman.shadow' version '5.2.0'
-    id 'io.franzbecker.gradle-lombok' version '3.2.0'
     id 'java'
-    id "com.jfrog.artifactory" version "4.13.0"
 }
 
 apply plugin: 'java'
 apply plugin: 'com.github.johnrengelman.shadow'
 apply plugin: 'io.ratpack.ratpack-java'
-apply plugin: 'com.jfrog.artifactory'
 
 sourceCompatibility = JavaVersion.VERSION_11
 targetCompatibility = JavaVersion.VERSION_11
@@ -17,33 +14,38 @@ targetCompatibility = JavaVersion.VERSION_11
 repositories {
     jcenter()
     maven {
-        url 'https://artifactory.sergeybochkov.com/artifactory/libs-release'
+        url 'https://nexus.sergeybochkov.com/repository/maven-public'
     }
 }
 
 dependencies {
-
     compile group: 'org.quartz-scheduler', name: 'quartz', version: '2.3.2'
 
-    compile group: 'org.mongodb', name: 'mongodb-driver', version: '3.12.1'
+    compile group: 'org.mongodb', name: 'mongodb-driver', version: '3.12.5'
 
-    compile group: 'org.cactoos', name: 'cactoos', version: '0.43'
+    compile group: 'org.cactoos', name: 'cactoos', version: '0.46'
     compile group: 'com.jcabi', name: 'jcabi-log', version: '0.18.1'
     compile group: 'com.jcabi', name: 'jcabi-email', version: '1.10'
     compile group: 'com.jcabi', name: 'jcabi-http', version: '1.17.2'
-    compile group: 'com.jcabi', name: 'jcabi-xml', version: '0.22.1'
+    compile group: 'com.jcabi', name: 'jcabi-xml', version: '0.22.2'
     
     compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
     compile group: 'javax.mail', name: 'mail', version: '1.4.7'
     compile group: 'com.sun.jersey', name: 'jersey-client', version: '1.19.4'
-    compile group: 'org.glassfish', name: 'javax.json', version: '1.0.4'
+    compile group: 'org.glassfish', name: 'javax.json', version: '1.1.4'
 
-    compile group: 'org.jsoup', name: 'jsoup', version: '1.12.1'
+    compile group: 'org.jsoup', name: 'jsoup', version: '1.13.1'
     compile group: 'org.jtwig', name: 'jtwig-core', version: '5.87.0.RELEASE'
 
-    compile group: 'resnyx', name: 'resnyx', version: '1.2'
+    compile group: 'resnyx', name: 'resnyx', version: '4.6.1'
     
     testCompile group: 'junit', name: 'junit', version: '4.12'
+
+    compileOnly 'org.projectlombok:lombok:1.18.12'
+    annotationProcessor 'org.projectlombok:lombok:1.18.12'
+
+    testCompileOnly 'org.projectlombok:lombok:1.18.12'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.12'
 
 }
 
