--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'io.ratpack.ratpack-java' version '1.10.0-milestone-3'
+    id 'io.ratpack.ratpack-java' version '2.0.0-rc-1'
     id 'com.github.johnrengelman.shadow' version '7.1.2'
     id 'java'
 }
@@ -12,44 +12,34 @@ targetCompatibility = JavaVersion.VERSION_17
 repositories {
     mavenCentral()
     maven {
-        url 'https://nexus.sergeybochkov.com/repository/maven-public'
+        url 'https://maven.sergeybochkov.com/releases'
     }
 }
 
 dependencies {
-    implementation('org.quartz-scheduler:quartz:2.3.2') {
-        exclude module: 'slf4j-api'
-    }
-    implementation 'org.mongodb:mongodb-driver:3.12.10'
+    implementation 'org.slf4j:slf4j-api:2.0.0-alpha7'
+    implementation 'ch.qos.logback:logback-classic:1.3.0-alpha16'
+
+    implementation('org.quartz-scheduler:quartz:2.3.2')
+    implementation 'org.mongodb:mongodb-driver:3.12.11'
     // mail
-    implementation ('com.jcabi:jcabi-email:1.12') {
-        exclude module: 'slf4j-api'
-    }
+    implementation ('com.jcabi:jcabi-email:1.12')
     implementation 'javax.activation:activation:1.1.1'
     implementation 'com.sun.mail:javax.mail:1.6.2'
     implementation 'javax.mail:mailapi:1.4.3'
     //
-    implementation 'com.konghq:unirest-java:3.13.4'
+    implementation 'com.konghq:unirest-java:3.13.8'
     implementation 'org.jsoup:jsoup:1.14.3'
-    implementation('org.thymeleaf:thymeleaf:3.0.14.RELEASE') {
-        exclude module: 'slf4j-api'
-    }
-    implementation('resnyx:resnyx:4.6.3') {
-        exclude module: 'slf4j-api'
-        exclude module: 'logback-classic'
-    }
-    implementation 'org.slf4j:slf4j-api:1.7.33'
-    implementation ('ch.qos.logback:logback-classic:1.2.10') {
-        exclude module: 'slf4j-api'
-    }
+    implementation 'org.thymeleaf:thymeleaf:3.0.15.RELEASE'
+    implementation 'resnyx:resnyx:4.6.6'
 
     testImplementation 'junit:junit:4.13.2'
 
-    compileOnly 'org.projectlombok:lombok:1.18.22'
-    annotationProcessor 'org.projectlombok:lombok:1.18.22'
+    compileOnly 'org.projectlombok:lombok:1.18.24'
+    annotationProcessor 'org.projectlombok:lombok:1.18.24'
 
-    testCompileOnly 'org.projectlombok:lombok:1.18.22'
-    testAnnotationProcessor 'org.projectlombok:lombok:1.18.22'
+    testCompileOnly 'org.projectlombok:lombok:1.18.24'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'
 }
 
 clean {
