--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'org.springframework.boot' version '2.7.5'
+    id 'org.springframework.boot' version '2.7.6'
     id 'io.spring.dependency-management' version '1.0.15.RELEASE'
     id 'java'
     id 'idea'
@@ -12,7 +12,6 @@ configurations {
         extendsFrom annotationProcessor
     }
 }
-
 
 repositories {
     mavenCentral()
@@ -30,7 +29,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-mail'
     //
     implementation 'org.thymeleaf.extras:thymeleaf-extras-java8time:3.0.4.RELEASE'
-    implementation 'com.konghq:unirest-java:3.13.12'
+    implementation 'com.konghq:unirest-java:3.13.13'
     implementation 'org.jsoup:jsoup:1.15.3'
     implementation 'resnyx:resnyx:4.6.6'
     implementation 'org.jetbrains:annotations:23.0.0'
@@ -43,4 +42,8 @@ dependencies {
 
 tasks.named('test') {
     useJUnitPlatform()
+}
+
+tasks.named('bootRun') {
+    args += ['--spring.config.name=tasks']
 }
