--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,13 @@
 plugins {
-    id 'org.springframework.boot' version '3.1.2'
-    id 'io.spring.dependency-management' version '1.1.2'
+    id 'org.springframework.boot' version '3.1.4'
+    id 'io.spring.dependency-management' version '1.1.3'
     id 'java'
     id 'idea'
-    id 'com.github.ben-manes.versions' version '0.47.0'
+    id 'com.github.ben-manes.versions' version '0.49.0'
 }
 
 group = 'sb'
-version = '3.1'
+version = '3.2'
 
 configurations {
     compileOnly {
@@ -16,8 +16,8 @@ configurations {
 }
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_17
-    targetCompatibility = JavaVersion.VERSION_17
+    sourceCompatibility = JavaVersion.VERSION_21
+    targetCompatibility = JavaVersion.VERSION_21
 }
 
 repositories {
@@ -36,10 +36,11 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-mail'
     //
     implementation 'org.thymeleaf.extras:thymeleaf-extras-java8time:3.0.4.RELEASE'
-    implementation platform('com.konghq:unirest-java-bom:4.0.4')
+    implementation platform('com.konghq:unirest-java-bom:4.1.0')
     implementation 'com.konghq:unirest-java-core'
+    implementation 'com.konghq:unirest-objectmapper-jackson'
     implementation 'org.jsoup:jsoup:1.16.1'
-    implementation 'resnyx:resnyx:4.6.6'
+    implementation 'resnyx:resnyx:6.9.0'
     implementation 'org.jetbrains:annotations:24.0.1'
     //
     compileOnly 'org.projectlombok:lombok'
