--- a/build.gradle
+++ b/build.gradle
@@ -39,14 +39,15 @@ dependencies {
     implementation platform('com.konghq:unirest-java-bom:4.2.4')
     implementation 'com.konghq:unirest-java-core'
     implementation 'com.konghq:unirest-objectmapper-jackson'
-    implementation 'org.jsoup:jsoup:1.17.1'
-    implementation 'resnyx:resnyx:6.9.0'
+    implementation 'org.jsoup:jsoup:1.17.2'
+    implementation 'resnyx:resnyx:7.0.0'
     implementation 'org.jetbrains:annotations:24.1.0'
     //
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
 tasks.named('test') {
