--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'org.springframework.boot' version '3.5.0'
+    id 'org.springframework.boot' version '3.5.3'
     id 'io.spring.dependency-management' version '1.1.7'
     id 'java'
     id 'idea'
@@ -28,6 +28,10 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation 'io.micrometer:micrometer-registry-prometheus'
+    implementation 'com.github.loki4j:loki-logback-appender:2.0.0'
+
     implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
     implementation 'org.springframework.boot:spring-boot-starter-quartz'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
@@ -40,7 +44,7 @@ dependencies {
     implementation 'com.konghq:unirest-modules-jackson'
 
     implementation 'org.seleniumhq.selenium:selenium-java:4.33.0'
-    implementation 'org.jsoup:jsoup:1.20.1'
+    implementation 'org.jsoup:jsoup:1.21.1'
     implementation 'resnyx:resnyx:9.0'
     //
     compileOnly 'org.jetbrains:annotations:26.0.2'
@@ -61,4 +65,12 @@ tasks.named('bootRun') {
 
 tasks.named('bootJar') {
     archiveFileName = 'tasks.jar'
+}
+
+tasks.named('dependencyUpdates').configure {
+    rejectVersionIf {
+        return ['.*-m\\d+'].any { part ->
+            it.candidate.version.toLowerCase().matches(part)
+        }
+    }
 }
