--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'org.springframework.boot' version '3.5.3'
+    id 'org.springframework.boot' version '3.5.6'
     id 'io.spring.dependency-management' version '1.1.7'
     id 'java'
     id 'idea'
@@ -39,13 +39,13 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-mail'
     //
     implementation 'org.thymeleaf.extras:thymeleaf-extras-java8time:3.0.4.RELEASE'
-    implementation platform('com.konghq:unirest-java-bom:4.5.0')
+    implementation platform('com.konghq:unirest-java-bom:4.5.1')
     implementation 'com.konghq:unirest-java-core'
     implementation 'com.konghq:unirest-modules-jackson'
 
-    implementation 'org.seleniumhq.selenium:selenium-java:4.34.0'
-    implementation 'org.jsoup:jsoup:1.21.1'
-    implementation 'resnyx:resnyx:9.1'
+    implementation 'org.seleniumhq.selenium:selenium-java:4.35.0'
+    implementation 'org.jsoup:jsoup:1.21.2'
+    implementation 'resnyx:resnyx:9.2'
     //
     compileOnly 'org.jetbrains:annotations:26.0.2'
     compileOnly 'org.projectlombok:lombok'
@@ -69,7 +69,7 @@ tasks.named('bootJar') {
 
 tasks.named('dependencyUpdates').configure {
     rejectVersionIf {
-        return ['.*-m\\d+'].any { part ->
+        return ['.*-m\\d+', '.+rc-?\\d+'].any { part ->
             it.candidate.version.toLowerCase().matches(part)
         }
     }
