--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'org.springframework.boot' version '4.0.0'
+    id 'org.springframework.boot' version '4.0.2'
     id 'io.spring.dependency-management' version '1.1.7'
     id 'java'
     id 'idea'
@@ -38,16 +38,16 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-micrometer-metrics'
     //
     implementation 'org.thymeleaf.extras:thymeleaf-extras-java8time:3.0.4.RELEASE'
-    implementation platform('com.konghq:unirest-java-bom:4.6.0')
+    implementation platform('com.konghq:unirest-java-bom:4.7.4')
     implementation 'com.konghq:unirest-java-core'
     implementation 'com.konghq:unirest-modules-jackson'
-    implementation 'org.seleniumhq.selenium:selenium-java:4.38.0'
-    implementation 'org.jsoup:jsoup:1.21.2'
-    implementation 'resnyx:resnyx:9.2'
-    implementation 'io.opentelemetry.instrumentation:opentelemetry-logback-appender-1.0:2.22.0-alpha'
+    implementation 'org.seleniumhq.selenium:selenium-java:4.40.0'
+    implementation 'org.jsoup:jsoup:1.22.1'
+    implementation 'resnyx:resnyx:9.3'
+    implementation 'io.opentelemetry.instrumentation:opentelemetry-logback-appender-1.0:2.24.0-alpha'
     implementation 'io.opentelemetry:opentelemetry-exporter-otlp'
     //
-    compileOnly 'org.jetbrains:annotations:26.0.2'
+    compileOnly 'org.jetbrains:annotations:26.0.2-1'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     annotationProcessor 'org.projectlombok:lombok'
